// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RevealPrivateCredential renders reveal SRP correctly when the credential is directly passed 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
      },
    ]
  }
  testID="reveal-private-credential-screen"
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      automaticallyAdjustContentInsets={false}
      contentInset={
        {
          "bottom": 0,
        }
      }
      enableAutomaticScroll={true}
      enableOnAndroid={false}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      getScrollResponder={[Function]}
      handleOnScroll={[Function]}
      keyboardDismissMode="interactive"
      keyboardOpeningTime={250}
      keyboardShouldPersistTaps="never"
      keyboardSpace={0}
      onScroll={[Function]}
      resetKeyboardSpace={[Function]}
      resetScrollToCoords={
        {
          "x": 0,
          "y": 0,
        }
      }
      scrollEventThrottle={1}
      scrollForExtraHeightOnAndroid={[Function]}
      scrollIntoView={[Function]}
      scrollToEnd={[Function]}
      scrollToFocusedInput={[Function]}
      scrollToPosition={[Function]}
      showsVerticalScrollIndicator={true}
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
      testID="reveal-credential-scroll"
      update={[Function]}
      viewIsInsideTabBar={false}
    >
      <View>
        <View
          style={
            [
              {
                "padding": 20,
              },
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontWeight": "400",
              },
            ]
          }
        >
          <Text
            style={
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontWeight": "400",
              }
            }
          >
            The
             
            <Text
              onPress={[Function]}
              style={
                [
                  {
                    "color": "#4459ff",
                  },
                  {
                    "top": 2.5,
                  },
                ]
              }
            >
              Secret Recovery Phrase (SRP)
            </Text>
             
            gives
             
            <Text
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Bold",
                  "fontWeight": "600",
                }
              }
            >
              full access to your wallet, funds and accounts.


            </Text>
            MetaMask is a
             
            <Text
              onPress={[Function]}
              style={
                [
                  {
                    "color": "#4459ff",
                  },
                  {
                    "top": 2.5,
                  },
                ]
              }
            >
              non-custodial wallet.
               
            </Text>
            That means,
             
            <Text
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Bold",
                  "fontWeight": "600",
                }
              }
            >
              you are the owner of your SRP.
            </Text>
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#ca35421a",
              "borderColor": "#ca3542",
              "borderRadius": 8,
              "borderWidth": 1,
              "margin": 20,
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              [
                {
                  "padding": 20,
                },
                {
                  "alignContent": "center",
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                },
              ]
            }
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={24}
              name="EyeSlash"
              style={
                {
                  "color": "#ca3542",
                  "height": 24,
                  "margin": 10,
                  "width": 24,
                }
              }
              width={24}
            />
            <Text
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Book",
                  "fontWeight": "400",
                  "marginLeft": 10,
                  "marginRight": 40,
                }
              }
            >
              Make sure nobody is looking at your screen. 
              <Text
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Bold",
                    "fontWeight": "600",
                  }
                }
              >
                MetaMask Support will never request this.
              </Text>
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "padding": 20,
            }
          }
        >
          <Text
            style={
              {
                "color": "#121314",
                "marginBottom": 15,
              }
            }
          >
            Enter password to continue
          </Text>
          <TextInput
            keyboardAppearance="light"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Password"
            placeholderTextColor="#9ca1af"
            secureTextEntry={true}
            style={
              {
                "borderColor": "#b7bbc8",
                "borderRadius": 5,
                "borderWidth": 2,
                "color": "#121314",
                "padding": 10,
              }
            }
            testID="private-credential-password-text-input"
          />
          <Text
            style={
              {
                "color": "#ca3542",
                "fontFamily": "CentraNo1-Book",
                "fontWeight": "400",
                "marginTop": 10,
              }
            }
            testID="password-warning"
          />
        </View>
        <View
          style={
            {
              "flex": 0,
              "flexDirection": "row",
              "paddingHorizontal": 24,
              "paddingVertical": 16,
            }
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={0.2}
            disabled={false}
            onPress={[Function]}
            style={
              [
                [
                  {
                    "borderRadius": 100,
                    "justifyContent": "center",
                    "padding": 15,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#686e7d",
                    "borderWidth": 1,
                  },
                  [
                    {
                      "flex": 1,
                    },
                    {
                      "marginRight": 8,
                    },
                  ],
                ],
                null,
              ]
            }
            testID="reveal-private-credential-cancel-button"
          >
            <Text
              style={
                [
                  {
                    "color": "#007aff",
                    "fontSize": 17,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  null,
                  [
                    {
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "textAlign": "center",
                    },
                    {
                      "color": "#686e7d",
                    },
                    undefined,
                  ],
                  null,
                ]
              }
            >
              Cancel
            </Text>
          </TouchableOpacity>
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={true}
            style={
              [
                [
                  {
                    "borderRadius": 100,
                    "justifyContent": "center",
                    "padding": 15,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#4459ff",
                    "borderWidth": 1,
                  },
                  [
                    {
                      "flex": 1,
                    },
                    {
                      "marginLeft": 8,
                    },
                    {},
                    {},
                  ],
                ],
                {
                  "opacity": 0.6,
                },
              ]
            }
            testID="reveal-private-credential-next-button"
          >
            <Text
              style={
                [
                  {
                    "color": "#007aff",
                    "fontSize": 17,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  {
                    "color": "#dcdcdc",
                  },
                  [
                    {
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "textAlign": "center",
                    },
                    {
                      "color": "#4459ff",
                    },
                    undefined,
                  ],
                  {
                    "opacity": 0.6,
                  },
                ]
              }
            >
              Next
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <Modal
    animationType="none"
    deviceHeight={null}
    deviceWidth={null}
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onBackdropPress={[Function]}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    onSwipeComplete={[Function]}
    panResponderThreshold={4}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    statusBarTranslucent={false}
    supportedOrientations={
      [
        "portrait",
        "landscape",
      ]
    }
    swipeDirection="down"
    swipeThreshold={100}
    testID="reveal-credential-modal"
    transparent={true}
    visible={false}
  />
  <View />
</View>
`;

exports[`RevealPrivateCredential renders reveal SRP correctly when the credential is passed via the route object 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
      },
    ]
  }
  testID="reveal-private-credential-screen"
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      automaticallyAdjustContentInsets={false}
      contentInset={
        {
          "bottom": 0,
        }
      }
      enableAutomaticScroll={true}
      enableOnAndroid={false}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      getScrollResponder={[Function]}
      handleOnScroll={[Function]}
      keyboardDismissMode="interactive"
      keyboardOpeningTime={250}
      keyboardShouldPersistTaps="never"
      keyboardSpace={0}
      onScroll={[Function]}
      resetKeyboardSpace={[Function]}
      resetScrollToCoords={
        {
          "x": 0,
          "y": 0,
        }
      }
      scrollEventThrottle={1}
      scrollForExtraHeightOnAndroid={[Function]}
      scrollIntoView={[Function]}
      scrollToEnd={[Function]}
      scrollToFocusedInput={[Function]}
      scrollToPosition={[Function]}
      showsVerticalScrollIndicator={true}
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
      testID="reveal-credential-scroll"
      update={[Function]}
      viewIsInsideTabBar={false}
    >
      <View>
        <View
          style={
            [
              {
                "padding": 20,
              },
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontWeight": "400",
              },
            ]
          }
        >
          <Text
            style={
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontWeight": "400",
              }
            }
          >
            The
             
            <Text
              onPress={[Function]}
              style={
                [
                  {
                    "color": "#4459ff",
                  },
                  {
                    "top": 2.5,
                  },
                ]
              }
            >
              Secret Recovery Phrase (SRP)
            </Text>
             
            gives
             
            <Text
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Bold",
                  "fontWeight": "600",
                }
              }
            >
              full access to your wallet, funds and accounts.


            </Text>
            MetaMask is a
             
            <Text
              onPress={[Function]}
              style={
                [
                  {
                    "color": "#4459ff",
                  },
                  {
                    "top": 2.5,
                  },
                ]
              }
            >
              non-custodial wallet.
               
            </Text>
            That means,
             
            <Text
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Bold",
                  "fontWeight": "600",
                }
              }
            >
              you are the owner of your SRP.
            </Text>
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#ca35421a",
              "borderColor": "#ca3542",
              "borderRadius": 8,
              "borderWidth": 1,
              "margin": 20,
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              [
                {
                  "padding": 20,
                },
                {
                  "alignContent": "center",
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                },
              ]
            }
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={24}
              name="EyeSlash"
              style={
                {
                  "color": "#ca3542",
                  "height": 24,
                  "margin": 10,
                  "width": 24,
                }
              }
              width={24}
            />
            <Text
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Book",
                  "fontWeight": "400",
                  "marginLeft": 10,
                  "marginRight": 40,
                }
              }
            >
              Make sure nobody is looking at your screen. 
              <Text
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Bold",
                    "fontWeight": "600",
                  }
                }
              >
                MetaMask Support will never request this.
              </Text>
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "padding": 20,
            }
          }
        >
          <Text
            style={
              {
                "color": "#121314",
                "marginBottom": 15,
              }
            }
          >
            Enter password to continue
          </Text>
          <TextInput
            keyboardAppearance="light"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Password"
            placeholderTextColor="#9ca1af"
            secureTextEntry={true}
            style={
              {
                "borderColor": "#b7bbc8",
                "borderRadius": 5,
                "borderWidth": 2,
                "color": "#121314",
                "padding": 10,
              }
            }
            testID="private-credential-password-text-input"
          />
          <Text
            style={
              {
                "color": "#ca3542",
                "fontFamily": "CentraNo1-Book",
                "fontWeight": "400",
                "marginTop": 10,
              }
            }
            testID="password-warning"
          />
        </View>
        <View
          style={
            {
              "flex": 0,
              "flexDirection": "row",
              "paddingHorizontal": 24,
              "paddingVertical": 16,
            }
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={0.2}
            disabled={false}
            onPress={[Function]}
            style={
              [
                [
                  {
                    "borderRadius": 100,
                    "justifyContent": "center",
                    "padding": 15,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#686e7d",
                    "borderWidth": 1,
                  },
                  [
                    {
                      "flex": 1,
                    },
                    {
                      "marginRight": 8,
                    },
                  ],
                ],
                null,
              ]
            }
            testID="reveal-private-credential-cancel-button"
          >
            <Text
              style={
                [
                  {
                    "color": "#007aff",
                    "fontSize": 17,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  null,
                  [
                    {
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "textAlign": "center",
                    },
                    {
                      "color": "#686e7d",
                    },
                    undefined,
                  ],
                  null,
                ]
              }
            >
              Cancel
            </Text>
          </TouchableOpacity>
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={true}
            style={
              [
                [
                  {
                    "borderRadius": 100,
                    "justifyContent": "center",
                    "padding": 15,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#4459ff",
                    "borderWidth": 1,
                  },
                  [
                    {
                      "flex": 1,
                    },
                    {
                      "marginLeft": 8,
                    },
                    {},
                    {},
                  ],
                ],
                {
                  "opacity": 0.6,
                },
              ]
            }
            testID="reveal-private-credential-next-button"
          >
            <Text
              style={
                [
                  {
                    "color": "#007aff",
                    "fontSize": 17,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  {
                    "color": "#dcdcdc",
                  },
                  [
                    {
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "textAlign": "center",
                    },
                    {
                      "color": "#4459ff",
                    },
                    undefined,
                  ],
                  {
                    "opacity": 0.6,
                  },
                ]
              }
            >
              Next
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <Modal
    animationType="none"
    deviceHeight={null}
    deviceWidth={null}
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onBackdropPress={[Function]}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    onSwipeComplete={[Function]}
    panResponderThreshold={4}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    statusBarTranslucent={false}
    supportedOrientations={
      [
        "portrait",
        "landscape",
      ]
    }
    swipeDirection="down"
    swipeThreshold={100}
    testID="reveal-credential-modal"
    transparent={true}
    visible={false}
  />
  <View />
</View>
`;

exports[`RevealPrivateCredential renders reveal private key correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
      },
    ]
  }
  testID="reveal-private-credential-screen"
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      automaticallyAdjustContentInsets={false}
      contentInset={
        {
          "bottom": 0,
        }
      }
      enableAutomaticScroll={true}
      enableOnAndroid={false}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      getScrollResponder={[Function]}
      handleOnScroll={[Function]}
      keyboardDismissMode="interactive"
      keyboardOpeningTime={250}
      keyboardShouldPersistTaps="never"
      keyboardSpace={0}
      onScroll={[Function]}
      resetKeyboardSpace={[Function]}
      resetScrollToCoords={
        {
          "x": 0,
          "y": 0,
        }
      }
      scrollEventThrottle={1}
      scrollForExtraHeightOnAndroid={[Function]}
      scrollIntoView={[Function]}
      scrollToEnd={[Function]}
      scrollToFocusedInput={[Function]}
      scrollToPosition={[Function]}
      showsVerticalScrollIndicator={true}
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
      testID="reveal-credential-scroll"
      update={[Function]}
      viewIsInsideTabBar={false}
    >
      <View>
        <View
          style={
            [
              {
                "padding": 20,
              },
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontWeight": "400",
              },
            ]
          }
        >
          <Text
            style={
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontWeight": "400",
              }
            }
          >
            Save it somewhere safe and secret.
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#ca35421a",
              "borderColor": "#ca3542",
              "borderRadius": 8,
              "borderWidth": 1,
              "margin": 20,
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              [
                {
                  "padding": 20,
                },
                {
                  "alignContent": "center",
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                },
              ]
            }
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={24}
              name="EyeSlash"
              style={
                {
                  "color": "#ca3542",
                  "height": 24,
                  "margin": 10,
                  "width": 24,
                }
              }
              width={24}
            />
            <Text
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Book",
                  "fontWeight": "400",
                  "marginLeft": 10,
                  "marginRight": 40,
                }
              }
            >
              Never disclose this key. Anyone with your private key can fully control your account, including transferring away any of your funds.
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "padding": 20,
            }
          }
        >
          <Text
            style={
              {
                "color": "#121314",
                "marginBottom": 15,
              }
            }
          >
            Enter password to continue
          </Text>
          <TextInput
            keyboardAppearance="light"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Password"
            placeholderTextColor="#9ca1af"
            secureTextEntry={true}
            style={
              {
                "borderColor": "#b7bbc8",
                "borderRadius": 5,
                "borderWidth": 2,
                "color": "#121314",
                "padding": 10,
              }
            }
            testID="private-credential-password-text-input"
          />
          <Text
            style={
              {
                "color": "#ca3542",
                "fontFamily": "CentraNo1-Book",
                "fontWeight": "400",
                "marginTop": 10,
              }
            }
            testID="password-warning"
          />
        </View>
        <View
          style={
            {
              "flex": 0,
              "flexDirection": "row",
              "paddingHorizontal": 24,
              "paddingVertical": 16,
            }
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={0.2}
            disabled={false}
            onPress={[Function]}
            style={
              [
                [
                  {
                    "borderRadius": 100,
                    "justifyContent": "center",
                    "padding": 15,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#686e7d",
                    "borderWidth": 1,
                  },
                  [
                    {
                      "flex": 1,
                    },
                    {
                      "marginRight": 8,
                    },
                  ],
                ],
                null,
              ]
            }
            testID="reveal-private-credential-cancel-button"
          >
            <Text
              style={
                [
                  {
                    "color": "#007aff",
                    "fontSize": 17,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  null,
                  [
                    {
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "textAlign": "center",
                    },
                    {
                      "color": "#686e7d",
                    },
                    undefined,
                  ],
                  null,
                ]
              }
            >
              Cancel
            </Text>
          </TouchableOpacity>
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={true}
            style={
              [
                [
                  {
                    "borderRadius": 100,
                    "justifyContent": "center",
                    "padding": 15,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#4459ff",
                    "borderWidth": 1,
                  },
                  [
                    {
                      "flex": 1,
                    },
                    {
                      "marginLeft": 8,
                    },
                    {},
                    {},
                  ],
                ],
                {
                  "opacity": 0.6,
                },
              ]
            }
            testID="reveal-private-credential-next-button"
          >
            <Text
              style={
                [
                  {
                    "color": "#007aff",
                    "fontSize": 17,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  {
                    "color": "#dcdcdc",
                  },
                  [
                    {
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "textAlign": "center",
                    },
                    {
                      "color": "#4459ff",
                    },
                    undefined,
                  ],
                  {
                    "opacity": 0.6,
                  },
                ]
              }
            >
              Next
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <Modal
    animationType="none"
    deviceHeight={null}
    deviceWidth={null}
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onBackdropPress={[Function]}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    onSwipeComplete={[Function]}
    panResponderThreshold={4}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    statusBarTranslucent={false}
    supportedOrientations={
      [
        "portrait",
        "landscape",
      ]
    }
    swipeDirection="down"
    swipeThreshold={100}
    testID="reveal-credential-modal"
    transparent={true}
    visible={false}
  />
  <View />
</View>
`;

exports[`RevealPrivateCredential renders with a custom selectedAddress 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
      },
    ]
  }
  testID="reveal-private-credential-screen"
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      automaticallyAdjustContentInsets={false}
      contentInset={
        {
          "bottom": 0,
        }
      }
      enableAutomaticScroll={true}
      enableOnAndroid={false}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      getScrollResponder={[Function]}
      handleOnScroll={[Function]}
      keyboardDismissMode="interactive"
      keyboardOpeningTime={250}
      keyboardShouldPersistTaps="never"
      keyboardSpace={0}
      onScroll={[Function]}
      resetKeyboardSpace={[Function]}
      resetScrollToCoords={
        {
          "x": 0,
          "y": 0,
        }
      }
      scrollEventThrottle={1}
      scrollForExtraHeightOnAndroid={[Function]}
      scrollIntoView={[Function]}
      scrollToEnd={[Function]}
      scrollToFocusedInput={[Function]}
      scrollToPosition={[Function]}
      showsVerticalScrollIndicator={true}
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
      testID="reveal-credential-scroll"
      update={[Function]}
      viewIsInsideTabBar={false}
    >
      <View>
        <View
          style={
            [
              {
                "padding": 20,
              },
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontWeight": "400",
              },
            ]
          }
        >
          <Text
            style={
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontWeight": "400",
              }
            }
          >
            Save it somewhere safe and secret.
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#ca35421a",
              "borderColor": "#ca3542",
              "borderRadius": 8,
              "borderWidth": 1,
              "margin": 20,
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              [
                {
                  "padding": 20,
                },
                {
                  "alignContent": "center",
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                },
              ]
            }
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={24}
              name="EyeSlash"
              style={
                {
                  "color": "#ca3542",
                  "height": 24,
                  "margin": 10,
                  "width": 24,
                }
              }
              width={24}
            />
            <Text
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Book",
                  "fontWeight": "400",
                  "marginLeft": 10,
                  "marginRight": 40,
                }
              }
            >
              Never disclose this key. Anyone with your private key can fully control your account, including transferring away any of your funds.
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "padding": 20,
            }
          }
        >
          <Text
            style={
              {
                "color": "#121314",
                "marginBottom": 15,
              }
            }
          >
            Enter password to continue
          </Text>
          <TextInput
            keyboardAppearance="light"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Password"
            placeholderTextColor="#9ca1af"
            secureTextEntry={true}
            style={
              {
                "borderColor": "#b7bbc8",
                "borderRadius": 5,
                "borderWidth": 2,
                "color": "#121314",
                "padding": 10,
              }
            }
            testID="private-credential-password-text-input"
          />
          <Text
            style={
              {
                "color": "#ca3542",
                "fontFamily": "CentraNo1-Book",
                "fontWeight": "400",
                "marginTop": 10,
              }
            }
            testID="password-warning"
          />
        </View>
        <View
          style={
            {
              "flex": 0,
              "flexDirection": "row",
              "paddingHorizontal": 24,
              "paddingVertical": 16,
            }
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={0.2}
            disabled={false}
            onPress={[Function]}
            style={
              [
                [
                  {
                    "borderRadius": 100,
                    "justifyContent": "center",
                    "padding": 15,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#686e7d",
                    "borderWidth": 1,
                  },
                  [
                    {
                      "flex": 1,
                    },
                    {
                      "marginRight": 8,
                    },
                  ],
                ],
                null,
              ]
            }
            testID="reveal-private-credential-cancel-button"
          >
            <Text
              style={
                [
                  {
                    "color": "#007aff",
                    "fontSize": 17,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  null,
                  [
                    {
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "textAlign": "center",
                    },
                    {
                      "color": "#686e7d",
                    },
                    undefined,
                  ],
                  null,
                ]
              }
            >
              Cancel
            </Text>
          </TouchableOpacity>
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={true}
            style={
              [
                [
                  {
                    "borderRadius": 100,
                    "justifyContent": "center",
                    "padding": 15,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#4459ff",
                    "borderWidth": 1,
                  },
                  [
                    {
                      "flex": 1,
                    },
                    {
                      "marginLeft": 8,
                    },
                    {},
                    {},
                  ],
                ],
                {
                  "opacity": 0.6,
                },
              ]
            }
            testID="reveal-private-credential-next-button"
          >
            <Text
              style={
                [
                  {
                    "color": "#007aff",
                    "fontSize": 17,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  {
                    "color": "#dcdcdc",
                  },
                  [
                    {
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "textAlign": "center",
                    },
                    {
                      "color": "#4459ff",
                    },
                    undefined,
                  ],
                  {
                    "opacity": 0.6,
                  },
                ]
              }
            >
              Next
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <Modal
    animationType="none"
    deviceHeight={null}
    deviceWidth={null}
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onBackdropPress={[Function]}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    onSwipeComplete={[Function]}
    panResponderThreshold={4}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    statusBarTranslucent={false}
    supportedOrientations={
      [
        "portrait",
        "landscape",
      ]
    }
    swipeDirection="down"
    swipeThreshold={100}
    testID="reveal-credential-modal"
    transparent={true}
    visible={false}
  />
  <View />
</View>
`;
